--- a/application/views/scripts/calendrier-des-commissions/gestionodj.phtml
+++ b/application/views/scripts/calendrier-des-commissions/gestionodj.phtml
@@ -560,7 +560,7 @@ $(document).ready(function() {
 			</span>
 		";
 		echo "
-			<ul class='unstyled sortable' id='listeDossierNoHours'>
+			<ul class='list-unstyled sortable' id='listeDossierNoHours'>
 		";
 		if( count($this->listeDossierNonAffect) != 0 ){
 			foreach ($this->listeDossierNonAffect as $dossierNonAffect){
