--- a/application/views/scripts/dossier/liees.phtml
+++ b/application/views/scripts/dossier/liees.phtml
@@ -315,7 +315,7 @@ echo "
 			echo "<br/><br/>";
 			echo "
 				<form id='listeEnfantEtab' >
-				<ul class='recherche_liste unstyled'>
+				<ul class='recherche_liste list-unstyled'>
 			";
 			if($this->infosDossier['VERROU_DOSSIER'] == 0){
 				if(isset($this->etablissement))
