--- a/application/views/scripts/dossier/textes-applicables.phtml
+++ b/application/views/scripts/dossier/textes-applicables.phtml
@@ -16,7 +16,7 @@
 <div class='row-fluid'>
     <?php foreach($this->textes_applicables_dossier as $titre => $textes_applicables) : ?>
         <h4><?php echo $titre ?></h4>
-        <ul class='unstyled'>
+        <ul class='list-unstyled'>
             <?php foreach($textes_applicables as $texte_applicable) : ?>
                 <li>
                     ✓ <?php echo $texte_applicable['LIBELLE_TEXTESAPPL'] ?>
