--- a/application/views/scripts/etablissement/add-piece-jointe.phtml
+++ b/application/views/scripts/etablissement/add-piece-jointe.phtml
@@ -20,7 +20,7 @@
 
 			<dt>Mise en avant</dt>
 			<dd>
-				<ul class='unstyled'>
+				<ul class='list-unstyled'>
 					<li><input type='radio' name='mise_en_avant' value='0' checked >Seulement dans la liste principale</li>
 					<li><input type='radio' name='mise_en_avant' value='1' >Afficher l'image dans le diaporama</li>
 					<li><input type='radio' name='mise_en_avant' value='2' >Afficher l'image dans les plans</li>
