--- a/application/views/scripts/etablissement/edit.phtml
+++ b/application/views/scripts/etablissement/edit.phtml
@@ -147,7 +147,7 @@
                 <!-- Type et activités -->
                 <dt>Types & activités</dt>
                 <dd>
-                    <ul id='activite_ul' class='unstyled'>
+                    <ul id='activite_ul' class='list-unstyled'>
                         <!-- Type et activité principal -->
                         <li>
                             <select name='ID_TYPE' style='width: 85px' class='type_select'>
