--- a/application/views/scripts/gestion-prescriptions/prescription-form.phtml
+++ b/application/views/scripts/gestion-prescriptions/prescription-form.phtml
@@ -34,7 +34,7 @@ echo "
 		</div>
 	</div>
 	<div class='row' id='alert' style='display:none;'>
-		<ul class='unstyled'>
+		<ul class='list-unstyled'>
 			<li class='alert alert-error' >
 				Veuillez spécifier au minimum un texte ou un article et un contenu avant la sauvegarde
 			</li>
