--- a/application/views/scripts/gestion-prescriptions/showarticlecontenu.phtml
+++ b/application/views/scripts/gestion-prescriptions/showarticlecontenu.phtml
@@ -3,7 +3,7 @@ echo "
 	<br/><br/>
 	<form id='FormPrescriptiontypeArticle_".$this->idArticle."' >
 		<input type='hidden' name='type' value='prescriptionType' />
-		<ul class='unstyled classement prescriptiontypeArticle_".$this->idArticle."' >
+		<ul class='list-unstyled classement prescriptiontypeArticle_".$this->idArticle."' >
 ";
 $nbPrescType = count($this->prescriptionType);
 for($i=0; $i < $nbPrescType; $i++)
