--- a/application/views/scripts/gestion-textes-applicables/index.phtml
+++ b/application/views/scripts/gestion-textes-applicables/index.phtml
@@ -20,7 +20,7 @@ foreach($this->listeTextesAppl as $val => $ue){
 			</div>
 		";
 		$idTypeMarq = $idType;
-		echo "<ul class='sortTexteAppl unstyled' id='liste_".$ue['ID_TYPETEXTEAPPL']."'>";
+		echo "<ul class='sortTexteAppl list-unstyled' id='liste_".$ue['ID_TYPETEXTEAPPL']."'>";
 		$marqueur = 0;
 	}
 	echo "
