--- a/application/views/scripts/index/partials/etablissements.phtml
+++ b/application/views/scripts/index/partials/etablissements.phtml
@@ -1,5 +1,5 @@
 <?php if (count($this->data) > 0): ?>
-  <ul class='recherche_liste unstyled no_slide scroll-bloc-medium'>
+  <ul class='recherche_liste list-unstyled no_slide scroll-bloc-medium'>
     <?php echo $this->partialLoop('search/results/etablissement.phtml', $this->data) ?>
   </ul>
 <?php else: ?>
