--- a/application/views/scripts/piece-jointe/form.phtml
+++ b/application/views/scripts/piece-jointe/form.phtml
@@ -8,7 +8,7 @@
 		<?php if($this->type == 'etablissement') : ?>
             <dt>Mise en avant (si c'est une image)</dt>
             <dd>
-                <ul class='unstyled'>
+                <ul class='list-unstyled'>
                     <li><input type='radio' name='PLACEMENT_ETABLISSEMENTPJ' value='null' checked />Seulement dans la liste principale</li>
                     <li><input type='radio' name='PLACEMENT_ETABLISSEMENTPJ' value='1' />Afficher l'image dans le diaporama</li>
                     <li><input type='radio' name='PLACEMENT_ETABLISSEMENTPJ' value='0' />Afficher l'image dans les plans</li>
