--- a/application/views/scripts/search/etablissement.phtml
+++ b/application/views/scripts/search/etablissement.phtml
@@ -142,7 +142,7 @@
             </div>
         <?php endif ?>
     </div>
-    <ul class='recherche_liste unstyled'>
+    <ul class='recherche_liste list-unstyled'>
     <?php echo $this->partialLoop('search/results/etablissement.phtml', $this->results ) ?>
     </ul>
     <br/>
