--- a/application/views/scripts/users/ressources-specialisees.phtml
+++ b/application/views/scripts/users/ressources-specialisees.phtml
@@ -100,7 +100,7 @@
                         <?php foreach( $this->types as $libelle_type => $_type ) : ?>
                             <dt style='width: 50px;'><?php echo $libelle_type ?><dt>
                             <dd style='margin-left: 70px;'>
-                                <ul class='unstyled'>
+                                <ul class='list-unstyled'>
                                 <?php foreach( $_type as $type ) : ?>
                                     <li>
                                         <input name='types[]' type='checkbox' value='<?php echo $type["ID_TYPEACTIVITE"] ?>' />
