--- a/application/views/scripts/contact/partial_fiche.phtml
+++ b/application/views/scripts/contact/partial_fiche.phtml
@@ -10,7 +10,7 @@
 
     <p class="fiche_contact_fonction"><?php echo $this->LIBELLE_FONCTION  ?> - <?php echo $this->SOCIETE_UTILISATEURINFORMATIONS  ?></p>
 
-    <ul class='unstyled'>
+    <ul class='list-unstyled'>
         <li>
             <span>Téléphone</span>
             <span class="valeur">
