--- a/application/views/scripts/gestion-prescriptions/formprescription.phtml
+++ b/application/views/scripts/gestion-prescriptions/formprescription.phtml
@@ -9,7 +9,7 @@ echo "
 	<div id='selectEmplacement' ></div>
 	<br/><br/>
 	<div class='row' id='alert' style='display:none;'>
-		<ul class='unstyled'>
+		<ul class='list-unstyled'>
 			<li class='alert alert-error' >
 				Veuillez spécifier au minimum un texte ou un article et un contenu avant la sauvegarde
 			</li>
